myStyle.css
* {box-sizing: border-box;}

body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}

.topnav {
  overflow: hidden;
  background-color: #e9e9e9;
}

.topnav a {
  float: left;
  display: block;
  color: black;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: #ddd;
  color: black;
}

.topnav a.active {
  background-color: #2196F3;
  color: white;
}

.topnav .search-container {
  float: right;
  position: absolute;
  top: 38px;
  left: 300px;
}

.topnav input[type=text] {
  padding: 6px;
  margin-top: 8px;
  font-size: 17px;
  border: none;
  height: 35px;
  width: 850px;
}

.topnav .search-container button {
  float: right;
  padding: 6px 10px;
  margin-top: 8px;
  margin-right: 40px;
  background: #ddd;
  font-size: 17px;
  border: none;
  cursor: pointer;
  width: 35px;
  height: 35px;
}

.topnav .search-container button:hover {
  background: #ccc;
}

@media screen and (max-width: 600px) {
  .topnav .search-container {
    float: none;
  }
  .topnav a, .topnav input[type=text], .topnav .search-container button {
    float: none;
    display: block;
    text-align: left;
    width: 100%;
    margin: 0;
    padding: 14px;
  }
  .topnav input[type=text] {
    border: 10px solid #ccc;  
  }
}




.midnav {
  overflow: hidden;
  background-color: #e9e9e9;
}

.midnav a {
  float: left;
  display: block;
  color: black;
  text-align: center;
  padding: 14px 40px;
  text-decoration: none;
  font-size: 17px;
}

.midnav a2 {
  float: right;
  display: block;
  color: black;
  text-align: center;
  padding: 14px 40px;
  text-decoration: none;
  font-size: 17px;
}

.midnav a:hover, .dropdown:hover .dropbtn{
  background-color: #ddd;
  color: black;
  cursor: pointer;
}

.midnav a2:hover {
  background-color: #ddd;
  color: black;
  cursor: pointer;
}


.midnav a.active {
  background-color: #2196F3;
  color: white;
}

.midnav a2.active {
  background-color: #2196F3;
  color: white;
}


.dropdown {
    float: left;
    overflow: hidden;
}

.dropdown .dropbtn {
    font-size: 16px;    
    border: none;
    outline: none;
    color: black;
    padding: 14px 16px;
    background-color: inherit;
    font-family: inherit;
    margin: 0;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown-content a {
    float: none;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

.dropdown-content a:hover {
    background-color: #ddd;
}

.dropdown:hover .dropdown-content {
    display: block;
}

